# cook

./: .gitignore  README  cook.lsm
aegis/: aedist.ae
src/: BUILDING  MANIFEST  Makefile.in  README  aegis.conf  configure  cook.spec
src/c_incl/: cache.c  cache.h  flatten.c  flatten.h  lang.c  lang.h  lang_c.c  lang_c.h  lang_m4.c  lang_m4.h  lang_optimis.c  lang_optimis.h  lang_roff.c  lang_roff.h  main.c  os.c  os_interface.h  sniff.c  sniff.h  stripdot.c  stripdot.h
src/common/: arglex.c  arglex.h  config.h.in  config.messy.h  env.c  env.h  error.c  error.h  error_intl.c  error_intl.h  exeext.c  exeext.h  fflush_slow.c  fflush_slow.h  format_print.h  fp.c  fp.h  fstrcmp.c  fstrcmp.h  gmatch.c  gmatch.h  help.c  help.h  home_directo.c  home_directo.h  input.c  input.h  itab.c  itab.h  language.c  language.h  libdir.c  libdir.h  main.h  mem.c  mem.h  mprintf.c  mprintf.h  noreturn.h  os_path_cat.c  (+36 more)
src/common/ac/: ar.h  ctype.h  dirent.h  errno.h  fcntl.h  libintl.c  libintl.h  limits.h  locale.h  mntent.c  mntent.h  regex.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  termios.h  time.c  time.h  unistd.h  utime.h  wchar.c  wchar.h  wctype.c  wctype.h
src/common/error_intl/: close.c  open.c  read.c  stat.c  unlink.c  write.c
src/common/fp/: README  cksum.c  cksum.h  combined.c  combined.h  crc32.c  crc32.h  ident.c  ident.h  len.c  len.h  md5.c  md5.h  snefru.c  snefru.h
src/common/input/: crlf.c  crlf.h  file.c  file.h  file_text.c  file_text.h  null.c  null.h  private.c  private.h  pushba_trans.c  stdin.c  stdin.h
src/common/str/: cat2.c  cat3.c  downcase.c  quote.c  re.c  re.h  substitute.c  upcase.c
src/common/sub/: basename.c  basename.h  date.c  date.h  dirname.c  dirname.h  downcase.c  downcase.h  errno.c  errno.h  expr.c  expr.h  expr_gram.h  expr_gram.y  expr_lex.c  expr_lex.h  ident.c  ident.h  left.c  left.h  length.c  length.h  plural.c  plural.h  private.h  progname.c  progname.h  right.c  right.h  upcase.c  upcase.h  zero_pad.c  zero_pad.h
src/cook/: archive.c  archive.h  builtin.c  builtin.h  cascade.c  cascade.h  cook.c  cook.h  desist.c  desist.h  dir_part.c  dir_part.h  expr.c  expr.h  fingerprint.c  fingerprint.h  flag.c  flag.h  function.c  function.h  graph.c  graph.h  hashline.h  hashline.y  id.c  id.h  lex.c  lex.h  listing.c  listing.h  main.c  match.c  match.h  meter.c  meter.h  opcode.c  opcode.h  option.c  option.h  os.c  (+13 more)
src/cook/builtin/: addprefix.c  addprefix.h  addsuffix.c  addsuffix.h  basename.c  basename.h  boolean.c  boolean.h  cando.c  cando.h  collect.c  collect.h  cook.c  cook.h  defined.c  defined.h  dos.c  dos.h  execute.c  execute.h  exists.c  exists.h  expr.c  expr.h  expr_lex.c  expr_lex.h  expr_parse.h  expr_parse.y  filter_out.c  filter_out.h  find_command.c  find_command.h  findstring.c  findstring.h  getenv.c  getenv.h  glob.c  glob.h  home.c  home.h  (+60 more)
src/cook/expr/: catenate.c  catenate.h  constant.c  constant.h  function.c  function.h  list.c  list.h  position.c  position.h
src/cook/fingerprint/: calc_string.c  calculate.c  filename.c  filename.h  find.c  find.h  gram.h  gram.y  ingredients.c  lex.c  lex.h  record.c  record.h  subdir.c  subdir.h  sync.c  sync.h  value.c  value.h
src/cook/graph/: build.c  build.h  check.c  check.h  edge_type.c  edge_type.h  file.c  file.h  file_list.c  file_list.h  file_pair.c  file_pair.h  leaf.c  leaf.h  pairs.c  pairs.h  recipe.c  recipe.h  recipe_list.c  recipe_list.h  run.c  run.h  script.c  script.h  stats.c  stats.h  walk.c  walk.h  web.c  web.h
src/cook/id/: builtin.c  builtin.h  function.c  function.h  global.c  global.h  nothing.c  nothing.h  private.c  private.h  variable.c  variable.h
src/cook/lex/: filename.c  filename.h  filenamelist.c  filenamelist.h
src/cook/match/: cook.c  cook.h  new.c  new_by_recip.c  new_by_recip.h  private.c  private.h  regex.c  regex.h  stack.c  stack.h  wl.c  wl.h
src/cook/opcode/: assign.c  assign.h  assign_appen.c  assign_appen.h  assign_local.c  assign_local.h  cascade.c  cascade.h  catenate.c  catenate.h  command.c  command.h  context.c  context.h  fail.c  fail.h  function.c  function.h  gosub.c  gosub.h  goto.c  goto.h  jmpf.c  jmpf.h  jmpt.c  jmpt.h  label.c  label.h  list.c  list.h  postlude.c  postlude.h  prelude.c  prelude.h  private.c  private.h  push.c  push.h  recipe.c  recipe.h  (+16 more)
src/cook/os/: below_dir.c  below_dir.h  dirnam_relat.c  path_cat.c  pathname.c  rel_if_poss.c  rel_if_poss.h  symlink.c  wait.c  wait.h
src/cook/recipe/: list.c  list.h
src/cook/stmt/: append.c  append.h  assign.c  fail.c  (+28 more)
src/cook_bom/: main.c  sniff.c  sniff.h
src/cookfp/: main.c
src/cooktime/: date.h  date.y  main.c
src/datadir/: as  bison  c  c++  f77  functions  g77  home  host_lists.pl  java  lex  library  print  program  rcs  recursive  sccs  text  usr  usr.local  yacc  yacc_many
src/debian/: changelog  control  cook.install  copyright  rules
src/etc/: CHANGES.1.10  CHANGES.1.11  CHANGES.1.2  CHANGES.1.3  CHANGES.1.4  CHANGES.1.5  CHANGES.1.6  CHANGES.1.7  CHANGES.1.8  CHANGES.1.9  CHANGES.2.0  CHANGES.2.1  CHANGES.2.10  CHANGES.2.11  CHANGES.2.12  CHANGES.2.15  CHANGES.2.16  CHANGES.2.17  CHANGES.2.18  CHANGES.2.19  CHANGES.2.2  CHANGES.2.20  CHANGES.2.26  CHANGES.2.3  CHANGES.2.30  CHANGES.2.31  CHANGES.2.34  CHANGES.2.4  CHANGES.2.5  CHANGES.2.6  CHANGES.2.7  CHANGES.2.9  CHANGES.sh  Howto.conf.in  Howto.cook  MANIFEST.sh  Makefi.file.sh  Makefile.awk  Makefile.head  Makefile.sh  (+30 more)
src/etc/template/: c  generic  h  man  ms  sh  test
src/file_check/: file_check.c  file_check.h  main.c
src/find_libs/: main.c  os.c  os_interface.h
src/fstrcmp/: main.c
src/lib/: as  bison  c  c++  f77  functions  g77  gcc  home  host_lists.pl  java  lex  library  print  program  rcs  recursive  sccs  text  usr  usr.local  yacc  yacc_many
src/make2cook/: blob.c  blob.h  emit.c  emit.h  gram.h  gram.y  lex.c  lex.h  main.c  stmt.c  stmt.h  vargram.h  vargram.y  variable.c  variable.h
src/po/: cook.pot
src/roffpp/: main.c  preprocess.c  preprocess.h
src/script/: cook_rsh.in
(+288 files in other folders)
